Adjust wording to strains notebook

--- a/inperson/02-multi-strain.ipynb
+++ b/inperson/02-multi-strain.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe2ef0f0-fbb4-425f-8d42-77996332ead8",
+   "id": "0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ee518db-c746-4aef-ad20-e01c95431d0c",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7a864e4-8072-4f55-8b81-c93dec5cc98c",
+   "id": "2",
    "metadata": {},
    "source": [
     "## Multiple competing strains\n",
@@ -41,13 +41,12 @@
     "### Seeding\n",
     "So that the two strains are seeded in the same way,\n",
     "we first ensure that all of the starting population is susceptible.\n",
-    "We then use a triangular function to injected infectious\n",
+    "We then use a triangular function to inject infectious\n",
     "persons into the model in order to seed the epidemic with each strain.\n",
-    "The time that each strain is introduced is then parameterised for\n",
-    "each strain that is introduced.\n",
+    "The time that each strain is introduced is then parameterised for each.\n",
     "The duration and rate of the seed is relatively unimportant\n",
     "because most of the dynamics are driven by transmission \n",
-    "as soon as the prevalence of the new strain reaches substantial levels.\n",
+    "as soon as the prevalence of the new strain reaches significant levels.\n",
     "\n",
     "### Competition\n",
     "Because the assumption of complete immunity after infection has not beeen relaxed,\n",
@@ -56,7 +55,7 @@
     "Given that we introduce the second (`mutant`) strain some time\n",
     "after the introduction of the first (`wild`) strain\n",
     "when the epidemic has begun to decline,\n",
-    "there are relatively few susceptibles for the second strain to infect.\n",
+    "there are relatively fewer susceptibles for the second strain to infect.\n",
     "We therefore increase its infectiousness to very high levels to get\n",
     "an observable epidemic.\n",
     "This is unlikely to be the best way to model most competing strain dynamics, \n",
@@ -70,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a8d1689-adf2-4bb5-8cb0-a04dbb4b0e8f",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9d4a4c0-ac90-48e6-89d1-0bb3ecfbccb1",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a90baa5-b601-4260-8313-b5f749a6e5d9",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de7eec55-c205-4960-b2df-b6bef6bf11ea",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,14 +167,6 @@
     "epi_model.run(parameters)\n",
     "epi_model.get_derived_outputs_df()[[f'notifX{strat}' for strat in strain_strata]].plot.area()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2debdd60",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -194,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
