--- a/recap/07-renewal.ipynb
+++ b/recap/07-renewal.ipynb
@@ -262,13 +262,23 @@
     "we're aiming to achieve from these models.\n",
     "\n",
     "As previously, the equation we're considering will be:\n",
-    "$\\\\I_t = (1-\\frac{n_t}{N})R_t\\sum_{\\tau<t} I_{\\tau}g_{t-\\tau}$\n",
-    "However, now the $R_{t}$ value is determined both\n",
-    "by an extrinsic variable (\"random\") process.\n",
-    "At this stage, the process will be arbitrary values,\n",
-    "and there are several functions that could be used\n",
-    "(including a random walk and an\n",
-    "autoregressive process).\n",
+    "$\\\\I_t = (1-\\frac{n_t}{N})V_t\\sum_{\\tau<t} I_{\\tau}g_{t-\\tau}$.\n",
+    "However, now the $I_{t}$ value is determined\n",
+    "by an extrinsic variable (\"random\") process \n",
+    "in addition to the depletion of susceptibles \n",
+    "and the contribution of preceding cases to current \n",
+    "total population infectiousness.\n",
+    "At this stage, this variable process will be \n",
+    "constructed as arbitrary values,\n",
+    "and there are several functions that could be used, such as\n",
+    "a random walk, a Gaussian process and an\n",
+    "autoregressive process.\n",
+    "Although notation is not universally consistent,\n",
+    "$R_{t}$ typically denotes the current number of secondary \n",
+    "cases propagated by each index after adjustment for \n",
+    "both changes in social contacts (i.e. $V_{t}$) \n",
+    "and depletion of susceptibles (i.e. $1-\\frac{n_t}{N}$).\n",
+    "That is $R_{t} = (1-\\frac{n_t}{N}) \\times V_{t}$.\n",
     "\n",
     "First, let's set up a variable process,\n",
     "which we'll define as the relative variation in the \n",
