Set up all base structure of TB model with parameters

--- a/inperson/04-tb.ipynb
+++ b/inperson/04-tb.ipynb
@@ -21,7 +21,7 @@
     "pd.options.plotting.backend = \"plotly\"\n",
     "\n",
     "from summer2 import CompartmentalModel\n",
-    "from summer2.parameters import Parameter"
+    "from summer2.parameters import Parameter, DerivedOutput"
    ]
   },
   {
@@ -47,7 +47,7 @@
     ")\n",
     "start_pop = {\n",
     "    \"susceptible\": 5e7,\n",
-    "    \"infectious\": 1.0,\n",
+    "    \"infectious\": 1e3,\n",
     "}\n",
     "tb_model.set_initial_population(start_pop)\n",
     "\n",
@@ -61,7 +61,7 @@
     "    \"all_cause_mortality\",\n",
     "    1.0 / Parameter(\"life_expectancy\"),\n",
     ")\n",
-    "tb_model.request_output_for_compartments(\"total_population\", compartments)\n",
+    "total_pop = tb_model.request_output_for_compartments(\"total_population\", compartments, save_results=False)\n",
     "\n",
     "# Infection / reinfection\n",
     "infection_dest = \"latent_early\"\n",
@@ -88,11 +88,17 @@
     "    \"latent_late\",\n",
     ")\n",
     "for progression_type in [\"early\", \"late\"]:\n",
+    "    progress_flow_name = f\"progression_{progression_type}\"\n",
     "    tb_model.add_transition_flow(\n",
-    "        f\"progression_{progression_type}\",\n",
+    "        progress_flow_name,\n",
     "        Parameter(f\"activation_rate_{progression_type}\"),\n",
     "        f\"latent_{progression_type}\",\n",
     "        \"infectious\",\n",
+    "    )\n",
+    "    tb_model.request_output_for_flow(\n",
+    "        progress_flow_name,\n",
+    "        progress_flow_name,\n",
+    "        save_results=False,\n",
     "    )\n",
     "\n",
     "# Natural history\n",
@@ -106,7 +112,13 @@
     "    \"active_tb_death\",\n",
     "    Parameter(\"tb_death_rate\"),\n",
     "    \"infectious\",\n",
-    ")"
+    ")\n",
+    "\n",
+    "# Outputs\n",
+    "infectious_pop = tb_model.request_output_for_compartments(\"infectious_pop\", [\"infectious\"], save_results=False)\n",
+    "tb_model.request_function_output(\"prevalence\", infectious_pop / total_pop * 1e5)\n",
+    "inc_func = (DerivedOutput(\"progression_early\") + DerivedOutput(\"progression_late\")) / total_pop * 1e5\n",
+    "tb_model.request_function_output(\"incidence\", inc_func);"
    ]
   },
   {
@@ -116,17 +128,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "prop_smear_pos = 0.5\n",
     "parameters = {\n",
     "    \"crude_birth_rate\": 20.0 / 1000.0,\n",
     "    \"life_expectancy\": 60.0,\n",
-    "    \"transmission_rate\": 0.0,\n",
-    "    \"rr_reinfection_latent_late\": 1.0,\n",
-    "    \"rr_reinfection_recovered\": 1.0,\n",
-    "    \"stabilisation_rate\": 0.0,\n",
-    "    \"activation_rate_early\": 0.0,\n",
-    "    \"activation_rate_late\": 0.0,\n",
-    "    \"self_recovery_rate\": 0.0,\n",
-    "    \"tb_death_rate\": 0.0,\n",
+    "    \"transmission_rate\": 50.0,\n",
+    "    \"rr_reinfection_latent_late\": 0.5,\n",
+    "    \"rr_reinfection_recovered\": 0.5,\n",
+    "    \"stabilisation_rate\": 1.0e-2,  # Ragonnet et al. Epidemics\n",
+    "    \"activation_rate_early\": 1.1e-3,  # Ragonnet et al. Epidemics\n",
+    "    \"activation_rate_late\": 5.5e-6,  # Ragonnet et al. Epidemics\n",
+    "    \"self_recovery_rate\": 0.231 * prop_smear_pos + 0.130 * (1.0 - prop_smear_pos),  # Ragonnet et al., CID\n",
+    "    \"tb_death_rate\": 0.389 * prop_smear_pos + 0.025 * (1.0 - prop_smear_pos),  # Ragonnet et al., CID\n",
     "}\n",
     "tb_model.run(parameters)"
    ]
@@ -135,6 +148,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tb_model.get_outputs_df().plot.area()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
