Remember that the Epidemics parameters are rates per day

--- a/inperson/04-tb.ipynb
+++ b/inperson/04-tb.ipynb
@@ -128,20 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prop_smear_pos = 0.5\n",
-    "parameters = {\n",
-    "    \"crude_birth_rate\": 20.0 / 1000.0,\n",
-    "    \"life_expectancy\": 60.0,\n",
-    "    \"transmission_rate\": 50.0,\n",
-    "    \"rr_reinfection_latent_late\": 0.5,\n",
-    "    \"rr_reinfection_recovered\": 0.5,\n",
-    "    \"stabilisation_rate\": 1.0e-2,  # Ragonnet et al. Epidemics\n",
-    "    \"activation_rate_early\": 1.1e-3,  # Ragonnet et al. Epidemics\n",
-    "    \"activation_rate_late\": 5.5e-6,  # Ragonnet et al. Epidemics\n",
-    "    \"self_recovery_rate\": 0.231 * prop_smear_pos + 0.130 * (1.0 - prop_smear_pos),  # Ragonnet et al., CID\n",
-    "    \"tb_death_rate\": 0.389 * prop_smear_pos + 0.025 * (1.0 - prop_smear_pos),  # Ragonnet et al., CID\n",
-    "}\n",
-    "tb_model.run(parameters)"
+    "tb_model.flows"
    ]
   },
   {
@@ -151,13 +138,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tb_model.get_outputs_df().plot.area()"
+    "prop_smear_pos = 0.5\n",
+    "parameters = {\n",
+    "    \"crude_birth_rate\": 20.0 / 1000.0,\n",
+    "    \"life_expectancy\": 60.0,\n",
+    "    \"transmission_rate\": 4.0,\n",
+    "    \"rr_reinfection_latent_late\": 0.5,\n",
+    "    \"rr_reinfection_recovered\": 0.5,\n",
+    "    \"stabilisation_rate\": 1.0e-2 * 365.25,  # Ragonnet et al. Epidemics\n",
+    "    \"activation_rate_early\": 1.1e-3 * 365.25,  # Ragonnet et al. Epidemics\n",
+    "    \"activation_rate_late\": 5.5e-6 * 365.25,  # Ragonnet et al. Epidemics\n",
+    "    \"self_recovery_rate\": 0.231 * prop_smear_pos + 0.130 * (1.0 - prop_smear_pos),  # Ragonnet et al., CID\n",
+    "    \"tb_death_rate\": 0.389 * prop_smear_pos + 0.025 * (1.0 - prop_smear_pos),  # Ragonnet et al., CID\n",
+    "}\n",
+    "tb_model.run(parameters)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tb_model.get_outputs_df().plot.area()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
