--- a/special_topics/01-tb.ipynb
+++ b/special_topics/01-tb.ipynb
@@ -128,26 +128,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tb_model.flows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "prop_smear_pos = 0.5\n",
+    "days_in_year = 365.25\n",
     "parameters = {\n",
     "    \"crude_birth_rate\": 20.0 / 1000.0,\n",
     "    \"life_expectancy\": 60.0,\n",
     "    \"transmission_rate\": 4.0,\n",
     "    \"rr_reinfection_latent_late\": 0.5,\n",
     "    \"rr_reinfection_recovered\": 0.5,\n",
-    "    \"stabilisation_rate\": 1.0e-2 * 365.25,  # Ragonnet et al. Epidemics\n",
-    "    \"activation_rate_early\": 1.1e-3 * 365.25,  # Ragonnet et al. Epidemics\n",
-    "    \"activation_rate_late\": 5.5e-6 * 365.25,  # Ragonnet et al. Epidemics\n",
+    "    \"stabilisation_rate\": 1.0e-2 * days_in_year,  # Ragonnet et al. Epidemics\n",
+    "    \"activation_rate_early\": 1.1e-3 * days_in_year,  # Ragonnet et al. Epidemics\n",
+    "    \"activation_rate_late\": 5.5e-6 * days_in_year,  # Ragonnet et al. Epidemics\n",
     "    \"self_recovery_rate\": 0.231 * prop_smear_pos + 0.130 * (1.0 - prop_smear_pos),  # Ragonnet et al., CID\n",
     "    \"tb_death_rate\": 0.389 * prop_smear_pos + 0.025 * (1.0 - prop_smear_pos),  # Ragonnet et al., CID\n",
     "}\n",
@@ -157,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
