Remove curvature request

--- a/special_topics/01-tb.ipynb
+++ b/special_topics/01-tb.ipynb
@@ -191,7 +191,7 @@
     "tb_detect_model = build_tb_model([\"treatment\"])\n",
     "x_pts = [1990., 2020.]\n",
     "y_pts = [0., Parameter(\"current_passive_detection_rate\")]\n",
-    "passive_detection_func = get_sigmoidal_interpolation_function(x_pts, y_pts, curvature=16)\n",
+    "passive_detection_func = get_sigmoidal_interpolation_function(x_pts, y_pts)\n",
     "tb_detect_model.add_transition_flow(\n",
     "    \"tb_detection\",\n",
     "    passive_detection_func,\n",
