Fix error in compartment wrangling

--- a/special_topics/01-tb.ipynb
+++ b/special_topics/01-tb.ipynb
@@ -39,10 +39,10 @@
     "        \"latent_late\",\n",
     "        \"infectious\",\n",
     "        \"recovered\",\n",
-    "    ]\n",
+    "    ] + extra_comps\n",
     "    model = CompartmentalModel(\n",
     "        times=[1800.0, 2024.0],\n",
-    "        compartments=compartments + extra_comps,\n",
+    "        compartments=compartments,\n",
     "        infectious_compartments=[\"infectious\"],\n",
     "    )\n",
     "    start_pop = {\n",
