--- a/special_topics/01-tb.ipynb
+++ b/special_topics/01-tb.ipynb
@@ -143,7 +143,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prop_smear_pos = 0.5\n",
     "days_in_year = 365.25\n",
     "parameters = {\n",
     "    \"crude_birth_rate\": 20.0 / 1000.0,\n",
@@ -154,8 +153,8 @@
     "    \"stabilisation_rate\": 1.0e-2 * days_in_year,  # Ragonnet et al. Epidemics\n",
     "    \"activation_rate_early\": 1.1e-3 * days_in_year,  # Ragonnet et al. Epidemics\n",
     "    \"activation_rate_late\": 5.5e-6 * days_in_year,  # Ragonnet et al. Epidemics\n",
-    "    \"self_recovery_rate\": 0.231 * prop_smear_pos + 0.130 * (1.0 - prop_smear_pos),  # Ragonnet et al., CID\n",
-    "    \"tb_death_rate\": 0.389 * prop_smear_pos + 0.025 * (1.0 - prop_smear_pos),  # Ragonnet et al., CID\n",
+    "    \"self_recovery_rate\": 0.2,\n",
+    "    \"tb_death_rate\": 0.2,\n",
     "}\n",
     "tb_model.run(parameters)"
    ]
@@ -167,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tb_model.get_outputs_df().plot.area()"
+    "parameters"
    ]
   },
   {
@@ -177,13 +176,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tb_model.get_derived_outputs_df().plot()"
+    "tb_model.get_outputs_df().plot.area()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tb_model.get_derived_outputs_df().plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
