--- a/special_topics/01-tb.ipynb
+++ b/special_topics/01-tb.ipynb
@@ -143,20 +143,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "days_in_year = 365.25\n",
+    "ragonnet_epidemics_params = {\n",
+    "    \"stabilisation_rate\": 1.0e-2,\n",
+    "    \"activation_rate_early\": 1.1e-3,\n",
+    "    \"activation_rate_late\": 5.5e-6,\n",
+    "}\n",
+    "latency_params = {k: v * 365.25 for k, v in ragonnet_epidemics_params.items()}\n",
     "parameters = {\n",
     "    \"crude_birth_rate\": 20.0 / 1000.0,\n",
     "    \"life_expectancy\": 60.0,\n",
     "    \"transmission_rate\": 4.0,\n",
     "    \"rr_reinfection_latent_late\": 0.5,\n",
     "    \"rr_reinfection_recovered\": 0.5,\n",
-    "    \"stabilisation_rate\": 1.0e-2 * days_in_year,  # Ragonnet et al. Epidemics\n",
-    "    \"activation_rate_early\": 1.1e-3 * days_in_year,  # Ragonnet et al. Epidemics\n",
-    "    \"activation_rate_late\": 5.5e-6 * days_in_year,  # Ragonnet et al. Epidemics\n",
     "    \"self_recovery_rate\": 0.2,\n",
     "    \"tb_death_rate\": 0.2,\n",
     "}\n",
-    "tb_model.run(parameters)"
+    "tb_model.run(parameters | latency_params)"
    ]
   },
   {
@@ -166,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameters"
+    "tb_model.get_outputs_df().plot.area()"
    ]
   },
   {
@@ -176,23 +178,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tb_model.get_outputs_df().plot.area()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "tb_model.get_derived_outputs_df().plot()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,13 +218,13 @@
     "    \"current_passive_detection_rate\": 0.5,\n",
     "    \"treatment_period\": 0.5,\n",
     "}\n",
-    "tb_detect_model.run(parameters | extra_params_for_detect)"
+    "tb_detect_model.run(parameters | latency_params | extra_params_for_detect)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
