Minor changes to allow flexibility in which compartments are stratified by strain

--- a/inperson/02-multi-strain.ipynb
+++ b/inperson/02-multi-strain.ipynb
@@ -131,7 +131,7 @@
    "outputs": [],
    "source": [
     "# Strain stratification\n",
-    "comps_to_stratify = [c for c in base_comps if c != 'susceptible']\n",
+    "comps_to_stratify = [c for c in base_comps if c not in ['susceptible', 'recovered']]\n",
     "strain_strata = ['wild', 'mutant']\n",
     "strain_strat = StrainStratification('strain', strain_strata, comps_to_stratify)\n",
     "epi_model.stratify_with(strain_strat)\n",
@@ -166,6 +166,16 @@
     "}\n",
     "epi_model.run(parameters)\n",
     "epi_model.get_derived_outputs_df()[[f'notifX{strat}' for strat in strain_strata]].plot.area()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epi_model.get_outputs_df().plot.area()"
    ]
   }
  ],
